--- a/generativeAiStyle.css
+++ b/generativeAiStyle.css
@@ -1,15 +1,41 @@
-section {
+#inputQuery {
     margin: 50px 100px 0 100px;
-    background-color: lightgrey;
+    background-color: transparent;
+    max-height: 550px;
+    height: 550px;
+}
+
+#checkbox {
+    margin: 50px 100px 0 100px;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1000px;
+    flex-wrap: wrap;
+    border-top: solid
 }
 
 h1 {
     font: bold 40px/1.5 "calibri";
+    border-bottom: solid;
+    border-width: 1px;
+    margin-top: 50px;
+    max-width: 1000px;
 }
 
-input {
+h2 {
+    font: normal 32px/1.5 "calibri"
+}
+
+.query, .enterButton {
     border-radius: 50px;
     font: normal 20px/1.5 "calibri";
+    position: absolute;
+    top: 680px;
+}
+
+.enterButton {
+    left: 350px;
 }
 
 .response {
@@ -21,3 +47,46 @@ header div a img {
     width: 65px;
 }
 
+header button {
+    border-radius: 30px;
+    height: 40px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+#instructions {
+    position: absolute;
+    top: 100px;
+    left: 1200px;
+}
+
+li {
+    font: lighter 27px/1.5 "calibri";
+    margin: 0 0 25px 0;
+}
+
+p {
+    font: lighter 13px/1.5 "calibri";
+    max-height: 450px;
+    max-width: 970px;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    top: 15px;
+    left: 15px;
+}
+
+#instructionsTitle {
+    position: relative;
+    left: 40px;
+}
+
+#content {
+    background-color: lightgrey;
+    border-radius: 15px;
+    max-width: 1000px;
+    height: 450px;
+}
