--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ h2 {
     border-width: 1px;
 }
 
+h3 {
+    font: bold 27px/1.5 "calibri";
+}
+
 p, li {
     font: lighter 27px/1.5 "calibri";
     margin: 0 0 25px 0;
@@ -124,17 +128,13 @@ nav ul li a:link, nav ul li a:visited, nav ul li a:active {
     border-width: 10px;
 }
 
-/*Section sideProjects*/
-#sideProjects {
-    margin: 0 30% 0 30%;
-}
-
 /*Footer*/
 footer {
     border-top-style: solid;
     border-width: 1px;
     display: flex;
     margin: 0 30% 0 30%;
+    padding: 0 0 20px 0;
 }
 
 footer ul li {
@@ -143,6 +143,10 @@ footer ul li {
 
 footer ul li:nth-child(1) {
     font: normal 27px/1.5 "calibri";
+}
+
+form {
+    margin: 0 0 0 240px;
 }
 
 footer form {
@@ -194,4 +198,9 @@ input {
 #submit input:hover {
     background-color: grey;1
     transition: 0.2s;
+}
+
+section {
+    margin: 0 30% 0 30%;
+    padding: 0 0 20px 0;
 }
